--- a/src/renderer/components/ChatWindow/styles.module.scss
+++ b/src/renderer/components/ChatWindow/styles.module.scss
@@ -5,6 +5,24 @@
   justify-content: end;
   min-width: 500px;
   margin: 30px auto;
+  position: relative;
+
+  .disconnected {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+  }
 
   .chatList {
     display: flex;
