--- a/src/renderer/routes/AuthenticateWindow/styles.module.scss
+++ b/src/renderer/routes/AuthenticateWindow/styles.module.scss
@@ -7,6 +7,14 @@
   margin: 30px auto;
   gap: 10px;
 
+  .error {
+    background-color: #fdf3f4;
+    border: 1px solid #eeacb2;
+    border-radius: 4px;
+    padding: 8px;
+    ;
+  }
+
   .chatInputContainer {
     display: flex;
     flex-direction: column;
