--- a/src/renderer/components/ChatItem/styles.module.scss
+++ b/src/renderer/components/ChatItem/styles.module.scss
@@ -35,6 +35,7 @@
         word-wrap: break-word;
         margin-bottom: 5px;
         max-width: 500px;
+        overflow-wrap: anywhere;
       }
     }
   
