--- a/src/renderer/components/ChatList/styles.module.scss
+++ b/src/renderer/components/ChatList/styles.module.scss
@@ -1,5 +1,6 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  contain: strict;
 }
