--- a/src/renderer/routes/ChatWindow/styles.module.scss
+++ b/src/renderer/routes/ChatWindow/styles.module.scss
@@ -3,9 +3,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: end;
-  min-width: 500px;
+  max-width: 1000px;
   margin: 30px auto;
   position: relative;
+  padding: 0 12px;
+  border: 1px solid #d1d1d1;
+  border-radius: 4px;
 
   .disconnected {
     position: absolute;
@@ -25,10 +28,6 @@
   }
 
   .chatList {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    overflow-y: auto;
     padding: 10px;
   }
 
@@ -36,6 +35,9 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    padding: 8px 12px;
+    border: 1px solid #d1d1d1;
+    border-radius: 4px;
 
     .input {
       flex: 1;
