--- a/src/renderer/components/Input/styles.module.scss
+++ b/src/renderer/components/Input/styles.module.scss
@@ -4,10 +4,11 @@
   box-sizing: border-box;
   text-decoration-line: none;
   border-radius: 8px;
-  border: 1px solid #d1d1d1;
+  border: none;
   width: 500px;
 
   &:active, &:focus, &:focus-within, &:focus-visible {
     border-color: black;
+    outline: none;
   }
 }
