--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -12,10 +12,11 @@ body {
   align-items: center;
   margin: 0;
   box-sizing: border-box;
+  background-color: #f5f5f5;
 }
 
 #root {
   height: 100%;
+  width: 100%;
   display: flex;
-  max-width: 500px;
 }
